# BackEnd/docs/swagger.json
@@ -386,14 +386,29 @@
                 "parameters": [
                     {
                         "type": "boolean",
-                        "description": "is it isVisible",
+                        "default": false,
+                        "description": "Is the spot visible",
                         "name": "isVisible",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number for pagination",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 15,
+                        "description": "Number of spots per page for pagination",
+                        "name": "pageSize",
                         "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Spot list",
+                        "description": "An example of a successful response",
                         "schema": {
                             "type": "string"
                         }
